# get_next_line

./: CMakeLists.txt  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c  main.c
dump_gnl/github/clion_get_next_line/: CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c
dump_gnl/github/clion_get_next_line/gnlTester/: gnlTest
dump_gnl/github/clion_get_next_line/gnlTester/gnlTest.dSYM/Contents/Resources/DWARF/: gnlTest
dump_gnl/github/clion_get_next_line/test/: read.c
dump_gnl/github/get_next_line/: get_next_line.c  get_next_line_bonus.c  get_next_line_utils.c  get_next_line_utils_bonus.c
dump_gnl/github/get_next_line/gnlTester/: gnlTest
dump_gnl/github/old_next_line/: a.out  get_next_line.h  main.c  vimrc.txt
dump_gnl/github/old_next_line/test/: a.out  read.c
dump_gnl/github/repo/: get_next_line.c
dump_gnl/github/repo/gnlTester/: Makefile
dump_gnl/macok/clion_get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  test.txt
dump_gnl/macok/clion_get_next_line/gnlTester/: Makefile  gnlTest
dump_gnl/macok/get_next_line/: get_next_line.c  get_next_line_utils.c  main.c  test.txt
dump_gnl/macok/get_next_line/test/: a.out  test.c
dump_gnl/macok/old_next_line/: .bashrc  get_next_line.c  get_next_line_utils.c  test.txt
gnl_openmax/: get_next_line.h  get_next_line_bonus.c  get_next_line_utils_bonus.c
linkedlistgnl/: CMakeLists.txt  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c  main.c  main2.c
linkedlistgnl/gnlTester/: gnlTest
(+1 files in other folders)
